<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/usage_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/app_bar_height"
        app:navigationContentDescription="@string/navigate_up"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/usage_report" />

    <androidx.core.widget.NestedScrollView
        android:id="@+id/usage_scroll"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/usage_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/screen_padding_horizontal"
            android:paddingEnd="@dimen/screen_padding_horizontal"
            android:paddingBottom="@dimen/spacing_large">

            <TextView
                android:id="@+id/usage_today_total"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_medium"
                android:textSize="32sp"
                tools:text="2h 14m" />

            <TextView
                android:id="@+id/usage_today_caption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usage_today_caption"
                android:textSize="@dimen/text_size_secondary" />

            <TextView
                android:id="@+id/usage_permission_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/usage_report_needs_access"
                android:textSize="@dimen/text_size_body"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/usage_grant_button"
                style="@style/Widget.Material3.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:text="@string/grant_permission"
                android:visibility="gone" />

            <TextView
                android:id="@+id/usage_week_header"
                style="@style/SettingsHeader"
                android:layout_marginTop="@dimen/spacing_section"
                android:paddingStart="0dp"
                android:text="@string/usage_last_7_days" />

            <LinearLayout
                android:id="@+id/usage_week_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <TextView
                android:id="@+id/usage_week_average"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_small"
                android:textSize="@dimen/text_size_secondary"
                tools:text="Daily average: 2h 3m" />

            <TextView
                android:id="@+id/usage_apps_header"
                style="@style/SettingsHeader"
                android:layout_marginTop="@dimen/spacing_section"
                android:paddingStart="0dp"
                android:text="@string/usage_today_by_app" />

            <LinearLayout
                android:id="@+id/usage_apps_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
